# gpvpn

./: .gitignore  README.md  configure.sh  mockup_login.sh  pyproject.toml
gpclientMockUp/: gpclientMockUp.c  gpclientMockup  makefile
src/gpvpn/: common.py  config.ini  config.py  message_processors.py  scripts.py  server.py
systemd/: gpvpn.service
tests/: conftest.py  mockup.ini  test_config.py  test_message_processor.py  test_server.py
